# target-tester

./: README.md  meltano.yml  pyproject.toml
target_tester/: sinks.py  target.py
target_tester/tests/: __init__.py  test_core.py
